Fixed tableView text alignment and loading indicator timing

--- a/Visualizer/src/main/resources/css/theme.css
+++ b/Visualizer/src/main/resources/css/theme.css
@@ -146,3 +146,6 @@
     -fx-font-size: 10pt;
 }
 
+.table-view .table-column {
+    -fx-alignment: CENTER;
+}
